--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -1,5 +1,6 @@
-$corDeFundo: #000;
+$corDeFundo: #090b13;
 $cortextoPrincipal: #f9f9f9;
 $corTextoSecundario: #cacaca;
 $corDeFundoBotaoPrimario: #6421ff;
 $corDeFundoBotaoSecundario: #fc3c36;
+$corDeFundoBotaoDark: #4e4a59 ;
