--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,28 +1,50 @@
 .hero {
     padding: 5.6vw;
-    min-height: 100vh;
     background-image: url(../images/hero\ image\ star+\ desktop.jpeg);
     background-size: cover;
     text-align: center;
     align-items: center;
-    display: flex;
-    position: relative;
+    display: flex;   
     justify-content: center;
 
+    @media (max-width: 768px) {
+        background-image: url(../images/image\ hero\ star\ +\ mobile.png);
+        width: 100%;
+        max-width: 570px;
+        
+        
+        h3 {
+            font-size: 22px;
+        }
+
+        .button {
+            font-size: 15px;
+        }
+
+    }
+
     &__content {
-        max-width: 740px;
+        max-width: 640px;
+        width: 50%;
+        z-index: 1;
             
 
         &__branding {
             max-width: 180px;
             margin: 0 auto 24px;
-            padding-top: 16vw;
+            padding-top: 22vw;
+            justify-content: center;
+
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+                width: 100%;
+            }
         }
     }
 
     .button {
         margin-top: 20px;
-        width: 700px;
     }
 
     .space {
