--- a/src/styles/faq.scss
+++ b/src/styles/faq.scss
@@ -6,12 +6,23 @@
         margin-bottom: 24px;
     }
 
+    @media (max-width: 768px) {
+        h2 {
+            font-size: 32px;
+        }
+    }
+
     &__questions {
         &__item {
             background-color: #35313f;
             margin-bottom: 16px;
-
+            
             &__question {
+
+                @media (max-width: 768px) {
+                    font-size: 16px;
+                }
+                
                 color: #fff;
                 font-size: 20px;
                 padding: 24px;
