--- a/src/styles/plans.scss
+++ b/src/styles/plans.scss
@@ -2,6 +2,13 @@
     padding: 5.6vw;
     display: block;
 
+    @media (max-width: 768px) {
+        h2 {
+            font-size: 32px;
+            padding-top: 30vw;
+        }
+    }
+
     h2 {
         text-align: center;
     }
