--- a/src/styles/shows.scss
+++ b/src/styles/shows.scss
@@ -6,12 +6,51 @@
 
     &__series {
         padding: 5.6vw;
+        
+        img {
+            max-width: 100%;
+        }
+
+        @media (max-width: 768px) {
+            h2 {
+                font-size: 32px;
+            }
+
+            p{
+                font-size: 14px;
+            }
+
+            img {
+                padding-bottom: 20vw;
+            }
+        }
     }
 
     &__sports {
         padding:5.6vw;
         display: flex;
         align-items: center;
+
+        @media (max-width: 768px) {
+            display: block;
+            padding: 20px 8px 0;
+            align-items: center;
+            text-align: center;
+
+            h2 {
+                font-size: 32px;
+            }
+
+            p {
+                font-size: 16px;
+            }
+
+            img {
+                max-width: 372px;
+                max-height: 312px;
+                margin: 20px 0 0;
+            }
+        }
         
         &__img {
             img {
@@ -26,6 +65,31 @@
     }
 
     &__simpsons {
+
+        @media (max-width: 768px){
+            display: block;
+            .shows__simpsons__text {
+                position: relative;
+                justify-content: center;
+                padding: 20px 8px 0;
+                text-align: center;
+                width: 100%;
+                background-color: #1373d1;
+
+                h2 {
+                    font-size: 32px;
+                    line-height: 1.2;
+                    
+                }
+
+                h5 {
+                    font-size: 16px;
+                    margin-top: 16px;
+                }
+            }
+            }
+    
+        
 
         &__text {
             padding: 96px 38px 0 96px;
@@ -50,6 +114,8 @@
                 width: 100%;
             }
         }
+        
+        
     }
 
 }
