--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,6 +1,6 @@
 .hero {
     padding: 5.6vw;
-    background-image: url(../images/hero\ image\ star+\ desktop.jpeg);
+    background-image: url(../../dist/images/hero_image.jpeg);
     background-size: cover;
     text-align: center;
     align-items: center;
@@ -9,7 +9,7 @@
     margin-top: -75px;
 
     @media (max-width: 768px) {
-        background-image: url(../images/image\ hero\ star\ +\ mobile.png);
+        background-image: url(../../dist/images/hero_mobile.png);
         margin-top: -50px;
         
         img {
